--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/main.ts"
+    "start": "nodemon src/main.ts",
+    "build": "tsc",
+    "start:prod": "node dist/main.js"
   },
   "keywords": [],
   "author": "",
