--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Compiled output
-/dist
-/node_modules
+*/dist
+*/node_modules
 
 # Logs
 logs
@@ -33,4 +33,4 @@ lerna-debug.log*
 .env.stage
 .offline.pid
 .envault.json
-yarn.lock
+*yarn.lock
